SAD-10: Fix base url and add Bearer security to secured routes.
