# internal/api/controllers/user_controllers.go
@@ -24,13 +24,14 @@ func NewUserController(us *services.UserService) *UserController {
 // GetUserInformationHandler godoc
 // @Summary Returns the user information
 // @Description Returns the user information
+// @Security		Bearer
 // @Tags User
 // @Accept json
 // @Produce json
 // @Security ApiKeyAuth
 // @Success 200 {object} models.User
 // @Failure 404 {string} string "User not found"
-// @Router /user [get]
+// @Router /api/v1/user [get]
 func (uc *UserController) GetUserInformationHandler(c *gin.Context) {
 	// Get the user ID from the request context
 	userID := c.GetString("x-user-id")
